--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     build:
       context: ./client
       dockerfile: development.Dockerfile
+    env_file: .env
     depends_on:
       - api
     volumes:
